php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #29505 get_class_vars() severely broken when used with arrays
Submitted: 2004-08-03 12:16 UTC Modified: 2004-08-03 19:04 UTC
From: stefan at hotpaenz dot de Assigned: helly (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 5.0.0 OS: *
Private report: No CVE-ID: None
 [2004-08-03 12:16 UTC] stefan at hotpaenz dot de
Description:
------------
The get_class_vars() function doesn't work correctly when 
the class contains an array. 
 

Reproduce code:
---------------
<?php

class ClassA {
    var $var=array();
}

$var=get_class_vars('ClassA');
var_dump($var);


Expected result:
----------------
array(1) { 
  ["var"]=> 
  array(0) { 
  } 
} 
 

Actual result:
--------------
array(1) { 
  ["var"]=> 
  UNKNOWN:0 
} 
 

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-08-03 19:04 UTC] helly@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 11 12:00:01 2026 UTC