- MFH Bug #29505 get_class_vars() severely broken when used with arrays